--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -7,7 +7,8 @@
     "backbone.marionette": "~2.4.3",
     "underscore": "~1.8.3",
     "jquery": "~2.1.4",
-    "requirejs": "~2.1.20"
+    "requirejs": "~2.1.20",
+    "backbone.radio": "~1.0.2"
   },
   "homepage": "https://github.com/cmdelatorre/agendacultural",
   "authors": [
